# gdf

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  setup.py  wordlist.txt
.github/workflows/: doc-preview.yaml  doc-qa.yaml  lint.yaml  main.yml  rtd-preview.yaml  test-conda-build.yml
datacube/: __init__.py
datacube/api/: core.py  query.py
datacube/cfg/: api.py  cfg.py  exceptions.py  opt.py  utils.py
datacube/drivers/: indexes.py  readers.py  writers.py
datacube/drivers/netcdf/: writer.py
datacube/drivers/postgis/: _api.py  _connections.py
datacube/drivers/postgis/alembic/versions/: d27eed82e1f6_remove_datasetlocation_table.py
datacube/drivers/postgres/: _connections.py
datacube/index/abstract/: _datasets.py  _index.py
datacube/index/postgis/: _datasets.py
datacube/index/postgres/: _datasets.py
datacube/model/: __init__.py  utils.py
datacube/scripts/: spindex.py
datacube/testutils/: __init__.py  geom.py
datacube/ui/: click.py
datacube/utils/: dates.py  documents.py  py.py
datacube/utils/aws/: __init__.py
datacube/utils/geometry/: _base.py  gbox.py  tools.py
datacube/utils/rio/: _rio.py
datacube/virtual/: transformations.py  utils.py
docker/: Dockerfile  constraints.in  constraints.txt
docs/: .doctor-rst.yaml  Makefile  click_utils.py  conf.py  index.rst  requirements.txt
docs/about/: index.rst  release_process.rst  whats_new.rst
docs/about-core-concepts/: accessing-data.rst  architecture-guide.rst  datasets.rst  extensions.rst  index.rst  metadata-types.rst  odc-ecosystem.rst  products.rst
docs/api/: cfg.rst  configuration.rst  index.rst
docs/api/core-classes/: datacube.rst  lineage-tree.rst  product.rst
docs/api/geometry/: index.rst
docs/api/indexed-data/: dataset-querying.rst  dataset-writing.rst  loading.rst
docs/cheatsheets/: README.rst
docs/data-access-analysis/: index.rst
docs/data-access-analysis/advanced-topics/: data-loading.rst  virtual-products.rst
docs/installation/: MIGRATION-1.8-to-1.9.rst  cli.rst  dataset-documents.rst  extending-odc.rst  index.rst
docs/installation/database/: configuration.rst  passing-configuration.rst  setup.rst
docs/installation/indexing-data/: step-guide.rst
docs/installation/setup/: common_install.rst  macosx.rst  ubuntu.rst  windows.rst
docs/tutorials/: index.rst  odc-stac.rst
integration_tests/index/: test_index_data.py  test_memory_index.py  test_null_index.py  test_postgis_index.py
tests/: conftest.py  test_cfg.py  test_driver.py  test_model.py  test_utils_cog.py  test_utils_docs.py  test_utils_other.py
tests/drivers/: test_rio_reader.py
tests/index/: test_query.py
